# obsiditube

./: .env.example  .gitignore  GEMINI.md  LICENSE  README.md  api.py  dev.py  main.py  pyproject.toml  requirements.txt  test_output.md  vercel.json
.zed/: env-context.txt
Docs/: creem-checkout-snippet.md  creem-product-description.md  paywall-implementation-plan.md  security-audit-report.md  services-setup-guide.md  session-2026-03-15.md  session-2026-03-17.md
api/: convert.py
frontend/: .gitignore  .vade-report  deno.json  next-startup-check.js  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/convert/: route.ts
frontend/src/app/api/license/validate/: route.ts
frontend/src/app/api/og/: route.tsx
frontend/src/app/api/webhooks/creem/: route.ts
frontend/src/app/api/webhooks/nowpayments/: route.ts
frontend/src/app/privacy/: page.tsx
frontend/src/app/refund/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/components/: LicenseContext.tsx  NotionCardPreview.tsx  ObsidianCardPreview.tsx  PaywallModal.tsx
frontend/src/components/ui/: button.tsx  card.tsx  label.tsx  skeleton.tsx
frontend/src/lib/: license-manager.ts
src/: config.py  license.py  webhooks.py
tests/: test_license.py  test_utils.py
